hasProfle added on me api
